helloworld/k8sGatewayAPI/gcr-sample/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: hello
spec:
  selector:
    app: hello
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
