helloworld/k8sGatewayAPI/gcr-sample/frontend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: hello
spec:
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
...
